[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons or icons/student button.png" type="Texture" id=4]
[ext_resource path="res://sprites/background/login page bg.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons or icons/teacher button.png" type="Texture" id=6]
[ext_resource path="res://Registration Login/Login/LoginRoleSelectPage.gd" type="Script" id=7]

[node name="LoginRoleSelectPage" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeacherButton" type="TextureButton" parent="."]
margin_left = 216.0
margin_top = 600.0
margin_right = 744.0
margin_bottom = 772.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StudentButton" type="TextureButton" parent="."]
margin_left = 216.0
margin_top = 824.0
margin_right = 752.0
margin_bottom = 996.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 104.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TeacherButton" to="." method="_on_TeacherButton_pressed"]
[connection signal="pressed" from="StudentButton" to="." method="_on_StudentButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
